--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,14 @@ before_script:
   - ./tests/travis/apache_setup.sh
   - ./tests/travis/mysql_setup.sh
   - mysql -u root -e "USE social_test; SHOW TABLES;" | wc -l
-  - mysql -u root ./plugins/publishfrom/install.sql
+  - mysql -u root social_test < ./plugins/publishfrom/install.sql
   - cp ./config/config.test.php.dist config/config.test.php
   - cp ./config/config.test.php.dist config/config.local.php
   - sudo sed -i s/sql-mode/#sql-mode/ /etc/mysql/my.cnf
   - sudo /etc/init.d/mysql restart
-  - ln -s ./livestreet/tests/behat/behat.yml ./livestreet/plugins/publishfrom/tests/behat/behat.yml
+  - ln -s `pwd`/tests/behat/behat.yml ./plugins/publishfrom/tests/behat/behat.yml
+  - ls -l ./plugins/publishfrom/tests/behat
+  - cat ./plugins/publishfrom/tests/behat/behat.yml
   - sleep 5
 
   - rm -rf ./install
